[workspace]
resolver = "2"

members = [
    "datafusion-federation",
    "datafusion-flight-sql-server",
    "datafusion-flight-sql-table-provider",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-federation"

[workspace.dependencies]
arrow = "53.2.0"
arrow-flight = { version = "53.2.0", features = ["flight-sql-experimental"] }
arrow-json = "53.2.0"
async-stream = "0.3.5"
async-trait = "0.1.81"
datafusion = "42.0.0"
datafusion-federation = { path = "./datafusion-federation", version = "0.3.0" }
datafusion-substrait = "42.0.0"
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["full"] }
tonic = { version = "0.12.1", features = [
    "tls",
    "transport",
    "codegen",
    "prost",
] }

[patch.crates-io]
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "2482ff45d0109c4a576e4cbfdd5769107fd9ede2" }
datafusion-substrait = { git = "https://github.com/apache/datafusion.git", rev = "2482ff45d0109c4a576e4cbfdd5769107fd9ede2" }
